Here is my second commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <div>
         <header>
             <h2>Wizard of Oz</h2>
-            <nav></nav>
+            <nav>
+                <ul>
+                    <li><a href="dorothy.html" Dorothy</a></li>
+                    <li><a href="tinman.html" Tin Man</a></li>
+                    <li><a href="scarecrow.html" Scarecrow</a></li>
+                    <li><a href="lion.html" Lion</a></li>
+                    <li><a href="witches.html" Witches</a></li>
+                </ul>
+            </nav>
         </header>
         <div><!-- put big image here --></div>
 
