hopefully fixing nav

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <h2>Wizard of Oz</h2>
             <nav>
                 <ul>
-                    <li><a href="dorothy.html" Dorothy</a></li>
-                    <li><a href="tinman.html" Tin Man</a></li>
-                    <li><a href="scarecrow.html" Scarecrow</a></li>
-                    <li><a href="lion.html" Lion</a></li>
-                    <li><a href="witches.html" Witches</a></li>
+                    <li><a href="dorothy.html" Dorothy></a></li>
+                    <li><a href="tinman.html" Tin Man></a></li>
+                    <li><a href="scarecrow.html" Scarecrow></a></li>
+                    <li><a href="lion.html" Lion></a></li>
+                    <li><a href="witches.html" Witches></a></li>
                 </ul>
             </nav>
         </header>
