added paragraph for index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>The Wizard of Oz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -12,19 +12,20 @@
             <h2>Wizard of Oz</h2>
             <nav>
                 <ul>
-                    <li><a href="dorothy.html" Dorothy></a></li>
-                    <li><a href="tinman.html" Tin Man></a></li>
-                    <li><a href="scarecrow.html" Scarecrow></a></li>
-                    <li><a href="lion.html" Lion></a></li>
-                    <li><a href="witches.html" Witches></a></li>
+                    <li><a href="dorothy.html">Dorothy</a></li>
+                    <li><a href="tinman.html">Tin Man</a></li>
+                    <li><a href="scarecrow.html">Scarecrow</a></li>
+                    <li><a href="lion.html">Lion</a></li>
+                    <li><a href="witches.html">Witches</a></li>
                 </ul>
             </nav>
         </header>
-        <div><!-- put big image here --></div>
+        <div><img src="img/wizard.jpg" alt="Wizard of Oz characters" style="width:600px";></div>
 
         <div>
             <main>
-                <section></section>
+                <h1>We Are Not In Kansas Anymore</h1>
+                <section><p><Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer imperdiet bibendum hendrerit. Ut molestie nec felis sed egestas. Nulla aliquam ante egestas nunc tristique imperdiet. Fusce sit amet viverra lectus. Nam auctor arcu at libero interdum, non ultricies mauris vulputate. Cras nunc sem, gravida a ornare dapibus, laoreet ac augue. Vestibulum ac nunc dui. Etiam cursus tellus vitae mollis vulputate. Morbi justo mi, ornare sit amet nisl sit amet, rutrum rhoncus orci. Aliquam vel metus varius, aliquet diam vitae, mollis elit. Nullam in est sit amet quam tristique tristique. Vestibulum fringilla accumsan lobortis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id nunc tellus. Aliquam ornare mauris quam, ac dictum ipsum dignissim quis.</p></Lorem></section>
                 <aside></aside>
 
             </main>
