css and gitignore added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Wizard of Oz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div>
+    <div class="container">
         <header>
             <h2>Wizard of Oz</h2>
             <nav>
@@ -23,21 +24,25 @@
         <div><img src="img/wizard.jpg" alt="Wizard of Oz characters" style="width:600px";></div>
 
         <div>
-            <main>
-                <h1>We Are Not In Kansas Anymore</h1>
-                <section><p><Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer imperdiet bibendum hendrerit. Ut molestie nec felis sed egestas. Nulla aliquam ante egestas nunc tristique imperdiet. Fusce sit amet viverra lectus. Nam auctor arcu at libero interdum, non ultricies mauris vulputate. Cras nunc sem, gravida a ornare dapibus, laoreet ac augue. Vestibulum ac nunc dui. Etiam cursus tellus vitae mollis vulputate. Morbi justo mi, ornare sit amet nisl sit amet, rutrum rhoncus orci. Aliquam vel metus varius, aliquet diam vitae, mollis elit. Nullam in est sit amet quam tristique tristique. Vestibulum fringilla accumsan lobortis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id nunc tellus. Aliquam ornare mauris quam, ac dictum ipsum dignissim quis.</p></Lorem></section>
-                <aside>
+            <h1>We Are Not In Kansas Anymore</h1>
+            <main class="flex-container">
+               
+                <section class="flex-item"><p><Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer imperdiet bibendum hendrerit. Ut molestie nec felis sed egestas. Nulla aliquam ante egestas nunc tristique imperdiet. Fusce sit amet viverra lectus. Nam auctor arcu at libero interdum, non ultricies mauris vulputate. Cras nunc sem, gravida a ornare dapibus, laoreet ac augue. Vestibulum ac nunc dui. Etiam cursus tellus vitae mollis vulputate. Morbi justo mi, ornare sit amet nisl sit amet, rutrum rhoncus orci. Aliquam vel metus varius, aliquet diam vitae, mollis elit. Nullam in est sit amet quam tristique tristique. Vestibulum fringilla accumsan lobortis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id nunc tellus. Aliquam ornare mauris quam, ac dictum ipsum dignissim quis.</p></Lorem></section>
+                <aside class="flex-item">
                     <article>
-                        <h3>Rbuy Slippers
+                        <h3>Ruby Slippers
                         <p>Lorem ipsum dladsj lsdf sldjf lsjdf sljdf jsd</p>
                         </h3>
+                    </article>
+                    <article>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue metus, porta at arcu ut, ultrices elementum erat. Aliquam ultrices efficitur quam ut finibus. Vivamus magna lacus, tincidunt quis volutpat sed, rutrum ut neque. Pellentesque id tincidunt nulla, ac cursus nunc. Fusce tincidunt magna vel nisi dictum, a pharetra nisi auctor. Nulla facilisi. Vestibulum accumsan odio a eros posuere laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis enim lectus, efficitur vitae purus vel, iaculis hendrerit leo. Fusce gravida arcu nec volutpat facilisis. Sed risus odio, placerat iaculis erat at, pretium tempor eros. Praesent at odio vel felis lacinia scelerisque. Vestibulum et blandit diam. Phasellus libero est, vestibulum eget mattis ac, sodales eu lectus. Donec condimentum erat ultricies mauris consequat egestas.
                     </article>
                 </aside>
 
             </main>
         </div>
 
-        <footer></footer>
+        <footer>&copy; 2018 Cohort 24</footer>
     </div><!-- closing div tag -->
 </body>
 </html>
