--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <aside class="flex-item">
                     <article>
                         <h3>Ruby Slippers
-                        <p>Lorem ipsum dladsj lsdf sldjf lsjdf sljdf jsd</p>
+                        <p>Lorem ipsum dladsj lsdf sldjf</p>
                         </h3>
                     </article>
                     <article>
